--- a/Welcome_to_Colaboratory.ipynb
+++ b/Welcome_to_Colaboratory.ipynb
@@ -66,12 +66,12 @@
         "%lsmagic"
       ],
       "metadata": {
-        "id": "73XNOHGFo8J2",
-        "outputId": "9ad90db7-1629-4dc1-f5bc-1b840b68ee9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 271
-        }
+        },
+        "id": "73XNOHGFo8J2",
+        "outputId": "9ad90db7-1629-4dc1-f5bc-1b840b68ee9f"
       },
       "execution_count": 7,
       "outputs": [
@@ -244,12 +244,12 @@
         "writefile function1.c"
       ],
       "metadata": {
-        "id": "l6TVHq94pTHn",
-        "outputId": "8cb52fe0-389e-4a17-8415-d602c4b0ba25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "l6TVHq94pTHn",
+        "outputId": "8cb52fe0-389e-4a17-8415-d602c4b0ba25"
       },
       "execution_count": 9,
       "outputs": [
@@ -290,11 +290,11 @@
         "}"
       ],
       "metadata": {
-        "id": "a1fCqqiMpwJU",
-        "outputId": "17eaa1ca-1be4-4300-83ce-6bc909cafb37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a1fCqqiMpwJU",
+        "outputId": "17eaa1ca-1be4-4300-83ce-6bc909cafb37"
       },
       "execution_count": 11,
       "outputs": [
@@ -326,6 +326,29 @@
           "name": "stdout",
           "text": [
             "Number is less than equal to 10."
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"i am pagol\")"
+      ],
+      "metadata": {
+        "id": "BGtvsOGSuXx8",
+        "outputId": "c203abad-14cd-4d28-a5e4-1a5048293c54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i am pagol\n"
           ]
         }
       ]
